<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardDetail"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:animateLayoutChanges="true"
    app:cardBackgroundColor="@color/light_primary"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp"
    app:cardUseCompatPadding="true"
    tools:context=".view.DetailFragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="true">

                <ImageView
                    android:id="@+id/detImg"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="32dp"
                    android:contentDescription="@string/imagen_superheroe"
                    app:layout_constraintBottom_toTopOf="@+id/detName"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@android:mipmap/sym_def_app_icon"
                    tools:ignore="ImageContrastCheck" />

                <TextView
                    android:id="@+id/detName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="68dp"
                    android:layout_marginTop="16dp"
                    android:autofillHints="Nombre:"
                    android:text="Name"
                    android:textAlignment="center"
                    android:textColor="@color/primary_text"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/detImg"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:id="@+id/detOrigin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/origin"
                    android:textAlignment="center"
                    android:textColor="@color/primary_text"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="@+id/detName"
                    app:layout_constraintTop_toBottomOf="@+id/detName" />

                <TextView
                    android:id="@+id/detPower"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:justificationMode="inter_word"
                    android:text="@string/power"
                    android:textAlignment="center"
                    android:textColor="@color/primary_text"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toTopOf="@+id/btnMail"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/detSince"
                    app:layout_constraintVertical_bias="0.0"
                    tools:textAlignment="gravity" />

                <TextView
                    android:id="@+id/detSince"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/since"
                    android:textAlignment="center"
                    android:textColor="@color/primary_text"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="@+id/detOrigin"
                    app:layout_constraintTop_toBottomOf="@+id/detOrigin" />

                <TextView
                    android:id="@+id/detColor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:text="@string/color"
                    android:textAlignment="center"
                    android:textColor="@color/primary_text"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="@+id/detSince"
                    app:layout_constraintStart_toEndOf="@+id/detSince"
                    app:layout_constraintTop_toTopOf="@+id/detSince" />

                <TextView
                    android:id="@+id/detTranslate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:text="@string/translate"
                    android:textAlignment="center"
                    android:textColor="@color/primary_text"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="@+id/detColor"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.087"
                    app:layout_constraintStart_toEndOf="@+id/detColor"
                    app:layout_constraintTop_toTopOf="@+id/detColor"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/detId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:text="@string/id"
                    android:textAlignment="center"
                    android:textColor="@color/primary_text"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="@+id/detTranslate"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.183"
                    app:layout_constraintStart_toEndOf="@+id/detTranslate"
                    app:layout_constraintTop_toTopOf="@+id/detTranslate"
                    app:layout_constraintVertical_bias="0.0" />

                <Button
                    android:id="@+id/btnMail"
                    android:layout_width="142dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="4dp"
                    android:layout_marginBottom="4dp"
                    android:backgroundTint="@color/accent"
                    android:elevation="4dp"
                    android:text="@string/lo_quiero"
                    app:cornerRadius="2dp"
                    app:icon="@drawable/baseline_tag_faces_24"
                    app:iconPadding="3dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/detImg"
                    tools:ignore="TextContrastCheck" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

    </ScrollView>


</androidx.cardview.widget.CardView>